Changed index.html (added carrousel.css) and menu-template.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- Custom styles for this template -->
     <link href="css/template.css" rel="stylesheet">
     <link href="css/modern-busines.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/carousel.css" type="text/css" />
     
     <!-- Font Awesome and Social icons css -->
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" />
