Try to change carousel efects, I can't for now, but May the Force be with me

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery.transit.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/carousel.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
     <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
