Solved menu class problem

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <body ng-app="appEnplater" ng-controller="AppController">
 
-    <menu-enplater  items="menuItems" language="language" ></menu-enplater>
+    <menu-enplater class="{{menuClass}}" items="menuItems" language="language" ></menu-enplater>
         
     <div style="height:100%" ui-view>
         
